Font has been changed

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -36,7 +36,7 @@
 
 ***/
 
-@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700');
 
 
 /*** 
